@@ -1304,12 +1304,13 @@ static const OptionInfo
     { "Edge", EdgeMorphology, UndefinedOptionFlag, MagickFalse },
     { "TopHat", TopHatMorphology, UndefinedOptionFlag, MagickFalse },
     { "BottomHat", BottomHatMorphology, UndefinedOptionFlag, MagickFalse },
-    { "Distance", DistanceMorphology, UndefinedOptionFlag, MagickFalse },
     { "Hmt", HitAndMissMorphology, UndefinedOptionFlag, MagickFalse },
     { "HitNMiss", HitAndMissMorphology, UndefinedOptionFlag, MagickFalse },
     { "HitAndMiss", HitAndMissMorphology, UndefinedOptionFlag, MagickFalse },
     { "Thinning", ThinningMorphology, UndefinedOptionFlag, MagickFalse },
     { "Thicken", ThickenMorphology, UndefinedOptionFlag, MagickFalse },
+    { "Distance", DistanceMorphology, UndefinedOptionFlag, MagickFalse },
+    { "IterativeDistance", IterativeDistanceMorphology, UndefinedOptionFlag, MagickFalse },
     { "Voronoi", VoronoiMorphology, UndefinedOptionFlag, MagickTrue },
     { (char *) NULL, UndefinedMorphology, UndefinedOptionFlag, MagickFalse }
   },
